--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PIG-GME</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
@@ -35,9 +35,9 @@
             </div>
         </div>
         </div>
-        <button id="reset" class="button btn"><img src="/icons/reset.png" alt="">New Game</button>
-        <button id="dicebtn" class="button btn"><img src="/icons/dice.png" alt="">Roll dice</button>
-        <button id="hold" class="button btn"><img src="/icons/hold.png" alt="">hold</button>
+        <button id="reset" class="button btn resetBtn"><img src="/icons/reset.png" alt="">New Game</button>
+        <button id="dicebtn" class="button btn diceBtn"><img src="/icons/dice.png" alt="">Roll dice</button>
+        <button id="hold" class="button btn holdBtn"><img src="/icons/hold.png" alt="">hold</button>
         <img id="roll1" class="dice" src="/icons/roll1.png" alt="">
     </main>
     <script src="/script.js"></script>
